css/main.css
html {
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-family: "Noto Sans", sans-serif;
  line-height: 1.5;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

[lang="ja"] {
  font-family: "Noto Sans JP", sans-serif;
  font-style: normal;
}

body {
  margin: 0;
  padding: 1rem;
}

img {
  display: block;
  width: 100%;
}

header, main {
  text-align: center;
}

ul li {
  justify-content: space-between;
  list-style-type: none;
  display: inline-block;
}

li a {
  color: #3783a3;
}

hr {
  border: 1.5px solid #e2e2e2;
}

main {
  max-width: 15em;
}

i {
  font-weight: normal;
  padding-bottom: 0;
}

.button {
  background-color: #fff;
  border: .2rem solid #3783a3;
  border-radius: .3rem;
  color: #3783a3;
  padding: .5em;
  opacity: .5;
}

footer {
  text-align: center;
}

@media only screen and (min-width: 38em) {

  body {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    grid-template-areas:
      "box1 box1 box1"
      "box2 box2 box2"
      "box3 box3 box3";
  }

  body img {
    grid-column: 1;
    grid-row: 1;
  }

  header {
    grid-area: box1;
  }

  main {
    grid-area: box2;
  }

  section:nth-of-type(1) {
    grid-area: box3;
  }

  section:nth-of-type(2) {
    grid-area: box3;
  }

  section:nth-of-type(3) {
    grid-area: box3;
  }

  section {
    justify-content: space-between;
    grid-column-gap: 1rem;
    align-items: stretch;
    flex-direction: row;
    display: flex;
  }

}

